# paypal_rest

./: .gitignore  CODE.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
paypal_rest/: __init__.py  client.py  cliquery.py  cliutil.py  config.py  errors.py  paypal_types.py  transaction.py
tests/: __init__.py  test_client.py  test_paypal_types.py  test_transaction.py
