[metadata]
name = paypal_rest
version = 1.0.4
author = Software Freedom Conservancy
author_email = info@sfconservancy.org
description = Library to access PayPal’s REST API
license = GNU AGPLv3+
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
  Documentation = %(url)s
  Source = %(url)s
url = https://k.sfconservancy.org/NPO-Accounting/paypal_rest

[bdist_wheel]
universal = 1

[mypy]
disallow_any_unimported = False
disallow_untyped_calls = False
disallow_untyped_defs = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = False
warn_unreachable = True
warn_unused_configs = True

[options]
include_package_data = True
install_requires =
  iso8601>=0.1
  oauthlib>=2.0
  pyxdg>=0.2
  PyYAML>=3.0
  requests>=2.0
  requests-oauthlib>=1.0
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
  paypal-query = paypal_rest.cliquery:entry_point

[options.packages.find]
exclude =
  tests

[testenv]
deps =
  mypy>=0.770
  pytest>=3.0
  pytest-mypy

commands =
  pytest
  pytest --mypy paypal_rest

[tool:pytest]
filterwarnings =
  ignore::DeprecationWarning:^socks$

[tox:tox]
envlist = py36,py37
